IDE: regenerated translations and updated Russian translation
(cherry picked from commit 05d3bb7c29dcf3dd2da699a2dc5dd9d3412d953e)

--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -10520,7 +10520,7 @@ msgid "IDE build options"
 msgstr "Kompilieroptionen der IDE"
 
 #: lazarusidestrconsts.lisidecaptioncustomhint
-msgid "The caption of the main IDE window"
+msgid "Additional info to display in the IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidecompileandrestart
@@ -10570,15 +10570,13 @@ msgid "Custom IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitleoptions
-msgid "IDE main window title"
+msgid "IDE main window and taskbar title"
 msgstr ""
 
-#: lazarusidestrconsts.lisidetitleshowsprojectdir
-msgid "IDE title shows project directory"
-msgstr "IDE-Titel beinhaltet Projektverzeichnis"
-
 #: lazarusidestrconsts.lisidetitlestartswithprojectname
-msgid "IDE title starts with project name"
+#, fuzzy
+#| msgid "IDE title starts with project name"
+msgid "Show custom IDE title before built-in IDE title or info"
 msgstr "IDE-Titel beginnt mit Projektname"
 
 #: lazarusidestrconsts.lisiecoallbuildmodes
@@ -16132,10 +16130,6 @@ msgctxt "lazarusidestrconsts.lisprojectdirectory"
 msgid "Project directory"
 msgstr "Projektverzeichnis"
 
-#: lazarusidestrconsts.lisprojectdirectoryisshowedinidetitlebar
-msgid "Title in taskbar shows also directory path of the project"
-msgstr "Titel im Taskbar zeigt auch den Verzeichnispfad des Projekts"
-
 #: lazarusidestrconsts.lisprojectfilename
 msgid "Project filename"
 msgstr "Projektdateiname"
@@ -18383,7 +18377,7 @@ msgstr "&Titel"
 #: lazarusidestrconsts.listitleintaskbarshowsforexampleproject1lpilazarus
 #, fuzzy
 #| msgid "Title in taskbar shows for example: project1.lpi - Lazarus"
-msgid "Title in taskbar shows for example: project1 - Lazarus"
+msgid "Show the custom IDE title before the IDE's name and other info in the title. Example: project1 - Lazarus."
 msgstr "Der Titel in der Taskbar zeigt z.B.: project1.lpi - Lazarus"
 
 #: lazarusidestrconsts.listitleleaveemptyfordefault
