--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -10580,7 +10580,7 @@ msgid "IDE build options"
 msgstr "IKA darymo parinktys"
 
 #: lazarusidestrconsts.lisidecaptioncustomhint
-msgid "The caption of the main IDE window"
+msgid "Additional info to display in the IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidecompileandrestart
@@ -10630,15 +10630,13 @@ msgid "Custom IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitleoptions
-msgid "IDE main window title"
+msgid "IDE main window and taskbar title"
 msgstr ""
 
-#: lazarusidestrconsts.lisidetitleshowsprojectdir
-msgid "IDE title shows project directory"
-msgstr "IKA antraštėje rodomas projekto aplankas"
-
 #: lazarusidestrconsts.lisidetitlestartswithprojectname
-msgid "IDE title starts with project name"
+#, fuzzy
+#| msgid "IDE title starts with project name"
+msgid "Show custom IDE title before built-in IDE title or info"
 msgstr "IKA antraštę pradėti projekto pavadinimu"
 
 #: lazarusidestrconsts.lisiecoallbuildmodes
@@ -16277,10 +16275,6 @@ msgctxt "lazarusidestrconsts.lisprojectdirectory"
 msgid "Project directory"
 msgstr "Projekto aplankas"
 
-#: lazarusidestrconsts.lisprojectdirectoryisshowedinidetitlebar
-msgid "Title in taskbar shows also directory path of the project"
-msgstr "Programų juostoje taip pat bus rodomas ir projekto aplanko kelias"
-
 #: lazarusidestrconsts.lisprojectfilename
 msgid "Project filename"
 msgstr "Projekto failo pavadinimas"
@@ -18553,7 +18547,7 @@ msgstr "&Antraštė"
 #: lazarusidestrconsts.listitleintaskbarshowsforexampleproject1lpilazarus
 #, fuzzy
 #| msgid "Title in taskbar shows for example: project1.lpi - Lazarus"
-msgid "Title in taskbar shows for example: project1 - Lazarus"
+msgid "Show the custom IDE title before the IDE's name and other info in the title. Example: project1 - Lazarus."
 msgstr "Antraštė programų juostoje, pavyzdžiui, bus tokia: projektas1.lpi - Lazarus"
 
 #: lazarusidestrconsts.listitleleaveemptyfordefault
