--- a/languages/lazaruside.pl.po
+++ b/languages/lazaruside.pl.po
@@ -10573,7 +10573,7 @@ msgid "IDE build options"
 msgstr "Opcje budowania IDE"
 
 #: lazarusidestrconsts.lisidecaptioncustomhint
-msgid "The caption of the main IDE window"
+msgid "Additional info to display in the IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidecompileandrestart
@@ -10622,15 +10622,13 @@ msgid "Custom IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitleoptions
-msgid "IDE main window title"
+msgid "IDE main window and taskbar title"
 msgstr ""
 
-#: lazarusidestrconsts.lisidetitleshowsprojectdir
-msgid "IDE title shows project directory"
-msgstr "Tytuł IDE zawiera katalog projektu"
-
 #: lazarusidestrconsts.lisidetitlestartswithprojectname
-msgid "IDE title starts with project name"
+#, fuzzy
+#| msgid "IDE title starts with project name"
+msgid "Show custom IDE title before built-in IDE title or info"
 msgstr "Nazwa projektu na początek tytułu okna IDE"
 
 #: lazarusidestrconsts.lisiecoallbuildmodes
@@ -16199,10 +16197,6 @@ msgctxt "lazarusidestrconsts.lisprojectdirectory"
 msgid "Project directory"
 msgstr "Katalog projektu"
 
-#: lazarusidestrconsts.lisprojectdirectoryisshowedinidetitlebar
-msgid "Title in taskbar shows also directory path of the project"
-msgstr ""
-
 #: lazarusidestrconsts.lisprojectfilename
 msgid "Project filename"
 msgstr "Nazwa pliku projektu"
@@ -18450,7 +18444,7 @@ msgid "&Title"
 msgstr "&Tytuł"
 
 #: lazarusidestrconsts.listitleintaskbarshowsforexampleproject1lpilazarus
-msgid "Title in taskbar shows for example: project1 - Lazarus"
+msgid "Show the custom IDE title before the IDE's name and other info in the title. Example: project1 - Lazarus."
 msgstr ""
 
 #: lazarusidestrconsts.listitleleaveemptyfordefault
