--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -10846,7 +10846,7 @@ msgid "IDE build options"
 msgstr "אפשרויות הבניה של ה IDE "
 
 #: lazarusidestrconsts.lisidecaptioncustomhint
-msgid "The caption of the main IDE window"
+msgid "Additional info to display in the IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidecompileandrestart
@@ -10895,15 +10895,13 @@ msgid "Custom IDE title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitleoptions
-msgid "IDE main window title"
-msgstr ""
-
-#: lazarusidestrconsts.lisidetitleshowsprojectdir
-msgid "IDE title shows project directory"
+msgid "IDE main window and taskbar title"
 msgstr ""
 
 #: lazarusidestrconsts.lisidetitlestartswithprojectname
-msgid "IDE title starts with project name"
+#, fuzzy
+#| msgid "IDE title starts with project name"
+msgid "Show custom IDE title before built-in IDE title or info"
 msgstr "הכותרת של ה IDE מתחילה בשם הפרוייקט"
 
 #: lazarusidestrconsts.lisiecoallbuildmodes
@@ -16886,10 +16884,6 @@ msgctxt "lazarusidestrconsts.lisprojectdirectory"
 msgid "Project directory"
 msgstr "תיקיית הפרויקט"
 
-#: lazarusidestrconsts.lisprojectdirectoryisshowedinidetitlebar
-msgid "Title in taskbar shows also directory path of the project"
-msgstr "הכותרת בשורת המשימות מראה גם את הנתיב אל תיקיית הפרוייקט"
-
 #: lazarusidestrconsts.lisprojectfilename
 msgid "Project filename"
 msgstr "שם הקובץ של הפרויקט"
@@ -19216,7 +19210,7 @@ msgstr "כותרת&"
 #: lazarusidestrconsts.listitleintaskbarshowsforexampleproject1lpilazarus
 #, fuzzy
 #| msgid "Title in taskbar shows for example: project1.lpi - Lazarus"
-msgid "Title in taskbar shows for example: project1 - Lazarus"
+msgid "Show the custom IDE title before the IDE's name and other info in the title. Example: project1 - Lazarus."
 msgstr "הכותרת בסרגל המשימות מראה למשל: project1.lpi - Lazarus"
 
 #: lazarusidestrconsts.listitleleaveemptyfordefault
